# httpie

./: Cargo.toml  readme.md  run.bat
src/: main.rs
